@@ -1,0 +1,5 @@
+import unittest
+
+class TestA(unittest.TestCase):
+    def test_truth(self):
+        self.assert_(True)
