@@ -4,7 +4,8 @@ zope.testing Changelog
 3.7.8 (unreleased)
 ==================
 
-- ...
+- Testrunner automatically picks up descendants of unittest.TestCase in test
+  modules, so you don't have to provide a test_suite() anymore.
 
 3.7.7 (2009-07-15)
 ==================
